# bitbar-server-status

./: Cargo.toml  LICENSE  README.md  wurstmineberg.45s.py
src/: files.rs  main.rs  model.rs  util.rs
