[package]
name = "bitbar-wurstmineberg-status"
version = "2.2.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2024"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
lto = true
strip = true

[dependencies]
async-trait = "0.1"
bitbar = { version = "0.10", features = ["base64"] }
chrono = { version = "0.4", features = ["serde"] }
css-color-parser = "0.1.2"
directories = "6"
image = "0.25"
itertools = "0.14"
mime = "0.3"
num-traits = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["charset", "hickory-dns", "http2", "json", "macos-system-configuration", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false }
thiserror = "2"
timespec = { git = "https://github.com/fenhl/rust-timespec", branch = "main" }
url = { version = "2", features = ["serde"] }
xdg = "3"
